--- a/package.json
+++ b/package.json
@@ -2,18 +2,20 @@
   "name": "gifs-against-humanity-be",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node dist/index.js"
+    "dev": "tsc && nodemon dist/main.js",
+    "start": "tsc && node dist/main.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.1.0"
   },
   "devDependencies": {
+    "nodemon": "^2.0.22",
     "typescript": "^5.0.4"
   }
 }
